src/main/resources/window_style.css
.root {
    -fx-background-color: black;
}

.GContainer {
    -fx-background-image: url("background_image.png");
    -fx-background-size: cover;
    -fx-background-position: center;
}

/*NEXT BRICK CSS*/
.NBrickContainer {
    -fx-border-width: 4px;
    -fx-border-radius: 10px;
    -fx-border-color: linear-gradient(#2A5058, #61a2b1);
    -fx-min-width: 120px;
    -fx-min-height: 120px;
    -fx-pref-width: 120px;
    -fx-pref-height: 120px;
    -fx-alignment: center;
    -fx-padding: 6px;
}

.nextBrickLabel {
    -fx-font-family: "Let's go Digital";
    -fx-padding: 20px 0 0 0;
    -fx-font-size: 16px;
    -fx-text-fill: yellow;
}
/*NEXT BRICK CSS*/

/* SCORE CSS */
.scoreContainer {
    -fx-border-width: 4px;
    -fx-border-radius: 10px;
    -fx-border-color: linear-gradient(#2A5058, #61a2b1);
    -fx-min-width: 120px;
    -fx-min-height: 80px;
    -fx-pref-width: 120px;
    -fx-pref-height: 80px;
    -fx-alignment: center;
    -fx-padding: 6px;
}
/* SCORE CSS */

/**CONTROLS CSS**/
.NTextLabel {
    -fx-font-family: "Let's go Digital";
    -fx-font-size: 20px;
    -fx-text-fill: yellow;
}

.HTextLabel {
     -fx-font-family: "Let's go Digital";
     -fx-font-size: 25px;
     -fx-text-fill: yellow;
 }

.STextLabel {
 -fx-font-family: "Let's go Digital";
 -fx-font-size: 12px;
 -fx-text-fill: yellow;
}

.MTextLabel {
 -fx-font-family: "Let's go Digital";
 -fx-font-size: 15px;
 -fx-text-fill: yellow;
}

.controlContainer {
    -fx-border-width: 4px;
    -fx-border-radius: 10px;
    -fx-border-color: linear-gradient(#2A5058, #61a2b1);
    -fx-min-width: 120px;
    -fx-min-height: 300px;
    -fx-pref-width: 120px;
    -fx-pref-height: 300px;
    -fx-alignment: center;
    -fx-padding: 6px;
}
/**CONTROLS CSS**/

/**PAUSE CSS**/
.pauseStyle1 {
    -fx-font-family: "Let's go Digital";
    -fx-font-size: 38;
    -fx-text-fill: white;
}

.pauseStyle2 {
    -fx-font-family: "Let's go Digital";
    -fx-font-size: 32;
    -fx-text-fill: white;
}
/**PAUSE CSS**/


/**GAMEOVER CSS**/
.gameOverStyle1 {
    -fx-font-family: "Let's go Digital";
    -fx-font-size: 48;
    -fx-background-color: red;
}

.gameOverStyleWhite {
    -fx-font-family: "Let's go Digital";
    -fx-font-size: 48;
    -fx-text-fill: white;   /* only change text color */
    -fx-background-color: transparent; /* remove red background */
}

.gameOverStyle2 {
    -fx-font-family: "Let's go Digital";
    -fx-font-size: 32;
    -fx-text-fill: white;
}

.gameOverStyle3 {
    -fx-font-family: "Let's go Digital";
    -fx-font-size: 28;
    -fx-text-fill: white;
}

/**GAMEOVER CSS**/

.gameBoard {
    -fx-border-color: linear-gradient(#2A5058, #61a2b1);
    -fx-border-width: 5px;
    -fx-border-radius: 10px;
    -fx-translate-y: 10px;
}

.ipad-dark-grey {
    -fx-background-color: linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%),
    linear-gradient(#020b02, #3a3a3a),
    linear-gradient(#9d9e9d 0%, #6b6a6b 20%, #343534 80%, #242424 100%),
    linear-gradient(#8a8a8a 0%, #6b6a6b 20%, #343534 80%, #262626 100%),
    linear-gradient(#777777 0%, #606060 50%, #505250 51%, #2a2b2a 100%);
    -fx-background-insets: 0, 1, 4, 5, 6;
    -fx-background-radius: 9, 8, 5, 4, 3;
    -fx-padding: 8;
    /*-fx-font-family: "Helvetica";*/
    -fx-font-family: "Let's go Digital";
    -fx-font-size: 22px;
    -fx-font-weight: bold;
    -fx-text-fill: white;
    -fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.2), 1, 0.0, 0, 1);
}

.rectangleStyle {
    -fx-fill: linear-gradient(from 41px 34px to 50px 50px, reflect, #ff7f50 30%, #faebd7 47%);
}

.vbox {
    -fx-spacing: 12;
}

.helpInfo {
    -fx-fill: white;
    -fx-alignment: center-left;
    -fx-text-alignment: left;
    -fx-font-size: 10px;
}

/*BONUS SCORE CSS*/
.bonusStyle {
    -fx-font-size: 40px;
    -fx-font-weight: bold;
}

.bonusStyle2 {
    -fx-font-size: 36px;
    -fx-font-weight: bold;
    -fx-text-fill: Yellow;
    -fx-translate-y: -60px;
}

.TimerContainer {
    -fx-border-width: 4px;
    -fx-border-radius: 10px;
    -fx-border-color: linear-gradient(#2A5058, #61a2b1);
    -fx-min-width: 120px;
    -fx-min-height: 80px;
    -fx-pref-width: 120px;
    -fx-pref-height: 80px;
    -fx-alignment: center;
    -fx-padding: 6px;
}
/*BONUS SCORE CSS*/

.SpeedContainer {
    -fx-border-width: 4px;
    -fx-border-radius: 10px;
    -fx-border-color: linear-gradient(#2A5058, #61a2b1);
    -fx-min-width: 120px;
    -fx-min-height: 60px;
    -fx-pref-width: 120px;
    -fx-pref-height: 60px;
    -fx-alignment: center;
    -fx-padding: 6px;
}

